--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
     <ListView
-        android:id="@+id/lv_sort_icon"
+        android:id="@+id/lv_sort_options"
         android:layout_height="wrap_content"
         android:layout_width="240dp"
         android:elevation="2dp"
